20190925
--------
- Fixed #44994 - Reduce the amount of calls to VDBJDBCDatabaseMetaData.getDatabaseMajorVersion()
                 in order to avoid a /$metadata performance issue.

20190528
--------
- Fixed #42688 - Fix documentation lacking explanation of the OAuth 2.0 support
- Added #40505 - Enhancement to support entity collection streaming in OData service connector
- Fixed #40963 - Default CORS config will be invalid with the next version of the embedded Tomcat

20190129
--------
- Added #36510 - The OData 4 Service logs an error because it is unnecessarily checking Kerberos availability in the VDP Server when no user has been configured in the data source connection
- Added #41521 - Added profile errorprone to execute error prone
- Added #41523 - Check and fix errors and CVE with error-prone and dependency check

20180814
--------
- Added #37783 - Update all instances of the Spring Framework in order to include fixes for the latest CVEs
- Fixed #37932 - The service fails while obtaining the PKs for a view if the user only has metadata privileges over it
- Fixed #38381 - Avoid entities without key properties
- Added #34744 - Add User Agent support to OData 4 Service
- Added #32299 - OAuth support in OData service

20180410
--------
- First version of the Denodo OData 4 Service for Denodo 7.0.