@@ -29,7 +29,7 @@
 	
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
-    <version>20190925</version>
+    <version>20200220</version>
 
     <organization>
         <name>Denodo Technologies</name>
